--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,7 @@
 # Java class files
 *.class
 
-# Generated files
-bin/
+# Generated files                                                                                                                                                                                                                                                                                                                    
 gen/
 
 # Gradle files
@@ -24,3 +23,5 @@ proguard/
 
 # Log Files
 *.log
+
+.metadata
